--- a/fichtec.html
+++ b/fichtec.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="fi_fblks">
                             <div class="fi_ftitl">projecto de comunicação</div>
-                            <div class="fi_ftxt">Carolina Couto<br>Catarina Barbosa<br>Catarina Correia<br>Catarina Serafim<br>Leonor Carvalho<br>Mafalda Cintra</div>
+                            <div class="fi_ftxt">Carolina Couto<br>Catarina Soares Barbosa<br>Catarina Correia<br>Catarina Serafim<br>Leonor Carvalho<br>Mafalda Cintra</div>
                         </div>
                     </div>
                     <div class="fi_holdfsec2">
@@ -87,7 +87,7 @@
                             <div class="fi_fbtitl">publicação</div>
                             <div class="fi_fiblks">
                             <div class="fi_fstitl">design e edição</div>
-                            <div class="fi_ftxt">Catarina Barbosa<br>Catarina Serafim</div>
+                            <div class="fi_ftxt">Catarina Soares Barbosa<br>Catarina Serafim</div>
                             </div>
                             <div class="fi_fiblks">
                             <div class="fi_fstitl">apoio à produção</div>
