--- a/guisoeiro.html
+++ b/guisoeiro.html
@@ -71,16 +71,16 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2b" href="deep_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
+                            <div class="profl_ttitl">Deep</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <a class="profl_tbox1b" href="sea_guisoeiro_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/3.3.seavideotipografico.guilhermesoeiro.jpg)"></div>
+                            <div class="profl_ttitl">Sea</div>
+                            <div class="profl_ttxt">Vídeo Tipográfico</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
