--- a/inssobral.html
+++ b/inssobral.html
@@ -76,11 +76,11 @@
                             <div class="profl_ttitl">Nuances</div>
                             <div class="profl_ttxt">Video Fotográfico</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="runn_inssobral_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/2.1.runningvideo.inessobral.jpg)"></div>
+                            <div class="profl_ttitl">Running</div>
+                            <div class="profl_ttxt">Vídeo Fílmico</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
