--- a/joalourenco.html
+++ b/joalourenco.html
@@ -64,18 +64,18 @@
                             <div class="profl_ttitl">Ensaio sobre a Revolução</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
-                        <div class="profl_tbox1a">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2a" href="dwndwndwn_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/1.0.down,down,down/capa.jpg)"></div>
+                            <div class="profl_ttitl">Down, down, down</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2b" href="fall_joalourenco_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/1.3.downdowndownfallingvideotipografico.joanalourenco.jpg)"></div>
+                            <div class="profl_ttitl">Falling</div>
+                            <div class="profl_ttxt">Vídeo Tipográfico</div>
+                        </a>
                         <div class="profl_tbox1b">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="profl_ttitl">nome do projecto</div>
