--- a/sea_pauldias_proj.html
+++ b/sea_pauldias_proj.html
@@ -4,9 +4,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>sem destino a - agenda</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            .slideshow-container {
+                display: table;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+                overflow: hidden;
+}
+.slideshow-container iframe {
+    display: flex;
+    display: -webkit-flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+            .sproj_intro{
+    column-count: 1;
+    -webkit-column-count: 1;
+}
+            @media only screen and (max-height: 420px){
+                .slideshow-container {
+	padding-bottom: 50%;
+}
+            }
+        </style>
     </head>
     <body>
         <script>
@@ -52,49 +80,20 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Catarina Serafim</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:catserafimillustration@gmail.com" target="_blank">catserafimillustration@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.catserafim.weebly.com");return false;'>catserafim.weebly.com</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">Sea</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s2" target="_self">The Dreams</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="apollfr1_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 1)</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
-                        </a>
-                        <a class="profl_tbox1a" href="apollfr2_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r2/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 2)</div>
-                            <div class="profl_ttxt">Cartazes</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1" href="nomma_proj.html" target="_self">
-                        <a class="profl_tbox2b" href="nomma_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/totido/wl/3.nomoremissamerica/capa.jpg)"></div>
-                            <div class="profl_ttitl">No more Miss America</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1b" href="sinest_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/12.instalacaoaudiovisual.inesserafinaguilherme.jpg)"></div>
-                            <div class="profl_ttitl">Sinestesia</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2c" href="deep_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
-                            <div class="profl_ttitl">Deep</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                        <a class="profl_tbox2d" href="sea_catserafim_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.1.seavideofotografico.catarinaserafim.jpg)"></div>
-                            <div class="profl_ttitl">Sea</div>
-                            <div class="profl_ttxt">Vídeo Fotográfico</div>
-                        </a>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="pauldias.html" target="_self">Paulo Dias</a>
                 </div>
+            </div>
+            <div class="slideshow-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hG-Ne0pM-jQ?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
