--- a/dwndwndwn_proj.html
+++ b/dwndwndwn_proj.html
@@ -4,9 +4,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>sem destino a - agenda</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            .sproj_intro{
+    column-count: 1;
+    -webkit-column-count: 1;
+}
+        </style>
     </head>
     <body>
         <script>
@@ -52,49 +58,45 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Catarina Serafim</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:catserafimillustration@gmail.com" target="_blank">catserafimillustration@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.catserafim.weebly.com");return false;'>catserafim.weebly.com</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">Down, down, down</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt2" target="_self">Pelo sonho é que vamos</a> > <a class="sproj_links" href="proj.html#vt2s2" target="_self">The Dreams</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="apollfr1_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 1)</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
-                        </a>
-                        <a class="profl_tbox1a" href="apollfr2_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r2/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 2)</div>
-                            <div class="profl_ttxt">Cartazes</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1" href="nomma_proj.html" target="_self">
-                        <a class="profl_tbox2b" href="nomma_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/totido/wl/3.nomoremissamerica/capa.jpg)"></div>
-                            <div class="profl_ttitl">No more Miss America</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1b" href="sinest_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/12.instalacaoaudiovisual.inesserafinaguilherme.jpg)"></div>
-                            <div class="profl_ttitl">Sinestesia</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2c" href="deep_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
-                            <div class="profl_ttitl">Deep</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                        <a class="profl_tbox2d" href="sea_catserafim_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.1.seavideofotografico.catarinaserafim.jpg)"></div>
-                            <div class="profl_ttitl">Sea</div>
-                            <div class="profl_ttxt">Vídeo Fotográfico</div>
-                        </a>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="carlcouto.html" target="_self">Carolina Couto</a>
+                    <a class="sproj_plinks" href="catbarbosa.html" target="_self">Catarina Soares Barbosa</a>
+                    <a class="sproj_plinks" href="joalourenco.html" target="_self">Joana Lourenço</a>
+                    <a class="sproj_plinks" href="leocarvalho.html" target="_self">Leonor Carvalho</a>
                 </div>
+                <div class="sproj_intro">
+                    <div class="sproj_txt"><p>Partindo da peça sonora “Falling” de Delia Derbyshire, reinterpretada pelo grupo, a instalação evoca a sensação de suspensão que antecede o momento da queda, tornando-se constante, anulando o encontro com o fim. Este momento está interrompido no tempo, no espaço e em nós próprios que caímos. Desequilibramo-nos em passos pendentes, deambulamos entre fragmentos, prolongamo-nos em movimentos circulares, em loop, flutuamos contorcidos num espaço vazio. Não o reconheço. O que é real? Estou acordado?</p></div>
+                </div>
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="css/img/psqv/2.thedreams/1.0.down,down,down/_MG_9124.JPG" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/psqv/2.thedreams/1.0.down,down,down/_MG_9125.JPG" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/psqv/2.thedreams/1.0.down,down,down/_MG_9203.JPG" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/psqv/2.thedreams/1.0.down,down,down/_MG_9328.JPG" style="width:100%">
+                </div>
+                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides(1)">&#10095;</div>
+                <div class="dot_holder">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
