--- a/mafldcintra.html
+++ b/mafldcintra.html
@@ -83,11 +83,11 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2c" href="runn_mafldcintra_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/2.2.running.mafaldacintra.jpg)"></div>
+                            <div class="profl_ttitl">Running</div>
+                            <div class="profl_ttxt">Video Fílmico</div>
+                        </a>
                     </div>
                 </div>
         </div>
