--- a/margsilva.html
+++ b/margsilva.html
@@ -71,11 +71,11 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2b" href="runn_margsilva_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/2.3.running.margaridasilva.jpg)"></div>
+                            <div class="profl_ttitl">Running</div>
+                            <div class="profl_ttxt">Vídeo Fílmico</div>
+                        </a>
                         <div class="profl_tbox1b">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="profl_ttitl">nome do projecto</div>
