--- a/pauldias.html
+++ b/pauldias.html
@@ -54,47 +54,42 @@
         </div>
         <div id="proflmain">
             <div class="profl_sec">
-                <div class="profl_titl">Catarina Serafim</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:catserafimillustration@gmail.com" target="_blank">catserafimillustration@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.catserafim.weebly.com");return false;'>catserafim.weebly.com</a></div>
+                <div class="profl_titl">Paulo Dias</div>
+                <div class="profl_links"><a class="profl_link" href="mailto:pauloshdias@gmail.com" target="_blank">pauloshdias@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("htps://www.behance.net/pauloshdias");return false;'>behance.net/pauloshdias</a></div>
             </div>
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="apollfr1_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 1)</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
-                        </a>
-                        <a class="profl_tbox1a" href="apollfr2_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r2/capa.jpg)"></div>
-                            <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 2)</div>
-                            <div class="profl_ttxt">Cartazes</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1" href="nomma_proj.html" target="_self">
-                        <a class="profl_tbox2b" href="nomma_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/totido/wl/3.nomoremissamerica/capa.jpg)"></div>
-                            <div class="profl_ttitl">No more Miss America</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1b" href="sinest_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/12.instalacaoaudiovisual.inesserafinaguilherme.jpg)"></div>
-                            <div class="profl_ttitl">Sinestesia</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2c" href="deep_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
+                        <a class="profl_tbox1a" href="deep_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
                             <div class="profl_ttitl">Deep</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
-                        <a class="profl_tbox2d" href="sea_catserafim_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.1.seavideofotografico.catarinaserafim.jpg)"></div>
+                        <a class="profl_tbox1a" href="sea_pauldias_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/3.5.seavideo.paulo.jpg)"></div>
                             <div class="profl_ttitl">Sea</div>
                             <div class="profl_ttxt">Vídeo Fotográfico</div>
                         </a>
                     </div>
-                </div>
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2b">
+                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                        <div class="profl_tbox1b">
+                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2c">
+                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
