--- a/pdrcartaxana.html
+++ b/pdrcartaxana.html
@@ -64,18 +64,18 @@
                             <div class="profl_ttitl">Tríptico</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
-                        <div class="profl_tbox1a">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1a" href="deep_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
+                            <div class="profl_ttitl">Deep</div>
+                            <div class="profl_ttxt">Instalação Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2b" href="sea_pdrcartaxana_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/2.thedreams/3.4.seavideo.pedrocartaxana.jpg)"></div>
+                            <div class="profl_ttitl">Sea</div>
+                            <div class="profl_ttxt">Vídeo Fílmico</div>
+                        </a>
                         <div class="profl_tbox1b">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="profl_ttitl">nome do projecto</div>
@@ -89,7 +89,7 @@
                             <div class="profl_ttxt">legenda</div>
                         </div>
                     </div>
-                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
