--- a/proj.html
+++ b/proj.html
@@ -428,29 +428,29 @@
                         <a class="proj_tbox1a" href="real_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/4.real.abelsara.jpg)"></div>
                             <div class="proj_ttitl">Real?</div>
-                            <div class="proj_ttxt">Video Fotográfico</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
                         </a>
                         <a class="proj_tbox1b" href="azul_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/5.azul.leonorlourenco.jpg)"></div>
                             <div class="proj_ttitl">Azul</div>
-                            <div class="proj_ttxt">Video Fotográfico</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
                         </a>
                         <a class="proj_tbox2e" href="insider_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/6.insider.mafaldacintra.jpg)"></div>
                             <div class="proj_ttitl">Insider</div>
-                            <div class="proj_ttxt">Video Fotográfico</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
                         </a>
                     </div>
                     <div class="proj_tfence2">
                         <a class="proj_tbox2a" href="tressmemo_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/7.tressuspiros.martaantunes.jpg)"></div>
                             <div class="proj_ttitl">Três Suspiros para uma Memória</div>
-                            <div class="proj_ttxt">Video Fotográfico</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
                         </a>
                         <a class="proj_tbox1e" href="efectsec_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/8.efeitosecundario.rodrigo.jpg)"></div>
                             <div class="proj_ttitl">Efeito secundário</div>
-                            <div class="proj_ttxt">Video Fotográfico</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
                         </a>
                         <a class="proj_tbox2d" href="pmental_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/9.palaciomental.margarida.jpg)"></div>
@@ -480,99 +480,96 @@
                     </div>
                 </div>
                 <div id="vt2s2" class="msprojtitl">The Dreams</div>
-                <div class="proj_tplaygrnd2">
-                    <div class="proj_tfence2">
-                        <div class="proj_tbox1c">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1d">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2b">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1a">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1a">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1c">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2b">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1a">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
+                <div class="proj_tplaygrnd1">
+                    <div class="proj_tfence4">
+                        <a class="proj_tdsbox1" href="runn_inssobral_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/2.1.runningvideo.inessobral.jpg)"></div>
+                            <div class="proj_ttitl">Running</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                        <a class="proj_tdsbox3" href="runn_mafldcintra_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/2.2.running.mafaldacintra.jpg)"></div>
+                            <div class="proj_ttitl">Running</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="runn_margsilva_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/2.3.running.margaridasilva.jpg)"></div>
+                            <div class="proj_ttitl">Running</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="runn_martantunes_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/2.4.running.martaantunes.jpg)"></div>
+                            <div class="proj_ttitl">Running</div>
+                            <div class="proj_ttxt">Vídeo Tipográfico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="runn_sarjorge_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/2.5.running.sarajorge.jpg)"></div>
+                            <div class="proj_ttitl">Running</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
                     </div>
-                    <div class="proj_tfence2">
-                        <div class="proj_tbox2a">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1e">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2d">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1f">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2a">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1e">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2d">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1f">
-                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox2a">
-                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
+                    <div class="proj_tfence3">
+                        <a class="proj_tdbbox1" href="dwndwndwn_proj.html" target="_self">
+                            <div class="proj_tbimg"style="background-image: url(css/img/psqv/2.thedreams/1.0.down,down,down/capa.jpg)"></div>
+                            <div class="proj_ttitl">Down, down, down</div>
+                            <div class="proj_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <a class="proj_tdsbox3" href="fall_carlcouto_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/1.1.downdowndownfallingvideo.carolinacouto.jpg)"></div>
+                            <div class="proj_ttitl">Falling</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="fall_catbarbosa_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/1.2.downdowndownfallingvideotipografico.catarinabarbosa.jpg)"></div>
+                            <div class="proj_ttitl">Falling</div>
+                            <div class="proj_ttxt">Vídeo Tipográfico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="fall_joalourenco_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/1.3.downdowndownfallingvideotipografico.joanalourenco.jpg)"></div>
+                            <div class="proj_ttitl">Falling</div>
+                            <div class="proj_ttxt">Vídeo Tipográfico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="fall_leocarvalho_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/1.4.downdowndownfallingvideo.leonorcarvalho.jpg)"></div>
+                            <div class="proj_ttitl">Falling</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                    </div>
+                    <div class="proj_tfence4">
+                        <a class="proj_tdbbox1" href="deep_proj.html" target="_self">
+                            <div class="proj_tbimg"style="background-image: url(css/img/psqv/2.thedreams/3.0.deep/capa.jpg)"></div>
+                            <div class="proj_ttitl">Deep</div>
+                            <div class="proj_ttxt">Instalação Audiovisual</div>
+                        </a>
+                        <a class="proj_tdsbox3" href="sea_catserafim_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/3.1.seavideofotografico.catarinaserafim.jpg)"></div>
+                            <div class="proj_ttitl">Sea</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="sea_insborges_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/3.2.seavideotipografico.inesborges.jpg)"></div>
+                            <div class="proj_ttitl">Sea</div>
+                            <div class="proj_ttxt">Vídeo Tipográfico</div>
+                        </a>
+                        <a class="proj_tdsbox3" href="sea_guisoeiro_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/3.3.seavideotipografico.guilhermesoeiro.jpg)"></div>
+                            <div class="proj_ttitl">Sea</div>
+                            <div class="proj_ttxt">Vídeo Tipográfico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="sea_pdrcartaxana_proj.html" target="_self">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/3.4.seavideo.pedrocartaxana.jpg)"></div>
+                            <div class="proj_ttitl">Sea</div>
+                            <div class="proj_ttxt">Vídeo Fílmico</div>
+                        </a>
+                        <a class="proj_tdsbox1" href="sea_pauldias_proj.html">
+                            <div class="proj_timg1"style="background-image: url(css/img/psqv/2.thedreams/3.5.seavideo.paulo.jpg)"></div>
+                            <div class="proj_ttitl">Sea</div>
+                            <div class="proj_ttxt">Vídeo Fotográfico</div>
+                        </a>
                     </div>
                 </div>
                 <div id="vt3" class="mprojtxtb">
-                    <div class="mprojtitl">Design Editorial I e II</div>
+                    <div class="mprojtitl">de livro a livro</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design Editorial I e II</div>
                 </div>
